2000-10-25  Miguel de Icaza  <miguel@helixcode.com>

	* ebrowser-widget.c (ebrowser_unregister_loader): Emit signal
	"done" when we are finished loading a page.

2000-10-25  Joe Shaw  <joe@helixcode.com>

        * ebrowser.c (ebrowser_factory): bonobo_object_add_interface the
        property bag to the control so we can QI the PropertyBag interace
        on the control.

2000-10-25  Miguel de Icaza  <miguel@helixcode.com>

	* test.c (main): Make enter also trigger a submit.

	* ebrowser-widget.c (ebrowser_register_loader): Update
	function. Encapsulates the process of registering the loader and
	sets up the signals.
	(ebrowser_url_requested): Use ebrowser_register_loader.
	(ebrowser_load): ditto.
	(ebrowser_loader_done): Use unregister_loader.

2000-10-25    <jpr@helixcode.com>

	* Makefile.am: Add flags and include $(top_srcdir)/src else
	we can't build without installing gtkhtml first

	* ebrowser-widget.h: Alter include because of above
	
	* eloader.h: ditto

	* eloader.c: ditto

	* .cvsignore: shush
	
2000-10-24  Lauris Kaplinski  <lauris@helixcode.com>

	* Initial CVS version